--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Juan Silva - Product Designer</title>
     <meta name="author" content="Juan Pablo Silva"/>
-    <meta name="description" content="UX Portfolio created using React and Bootstrap"/>
+    <meta name="description" content="All my professional links are organized and styled in one link."/>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Juan Silva - Product Desginer"/>
     <meta property="og:image" content="https://user-images.githubusercontent.com/113949476/227063641-e71cd726-61b4-434b-9c84-e742c9025fdb.png"/>
     <meta property="og:description" content="My Professional Links"/>
-    <meta property="og:url" content="https://juanpablodesigner.github.io/Professional-Links/"/>
+    <meta property="og:url" content="https://juansilvadesign.github.io/Professional-Links/"/>
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website"/>
@@ -36,7 +36,7 @@
     <body>
 
         <div id="hero-bg">
-            <img>
+            <img alt="hero background">
         </div>
 
         <div id="container">
@@ -78,7 +78,7 @@
 
                 <li id="html5css3">
                     <a
-                        href="https://juanpablodesigner.github.io/ProductDesigner-Resume/"
+                        href="https://juansilvadesign.github.io/ProductDesigner-Resume/"
                         rel="noopener noreferrer"
                         title="Built using HTML & CSS"
                         target="_blank">
@@ -91,7 +91,7 @@
 
                 <li id="react">
                     <a
-                        href="https://juanpablodesigner.github.io/space-ux-portfolio/"
+                        href="https://juansilvadesign.github.io/space-ux-portfolio/"
                         rel="noopener noreferrer"
                         title="Built using React"
                         target="_blank">
@@ -162,7 +162,7 @@
                 </a>
 
                 <a
-                    href="https://github.com/JuanPabloDesigner"
+                    href="https://github.com/juansilvadesign"
                     rel="noopener noreferrer"
                     title="All my coding projects"
                     target="_blank">
