--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div id="social-links">
 
                 <a
-                    href="https://linkedin.com/in/jaypy"
+                    href="https://linkedin.com/in/juansilvadesign"
                     rel="noopener noreferrer"
                     title="Connect with me"
                     target="_blank">
@@ -236,7 +236,7 @@
             </div>
             
             <footer>
-                Website created by <a href="https://linkedin.com/in/jaypy" rel="noopener noreferrer" title="Connect with me!" target="_blank">Juan Silva</a>, Product Designer and Frontend Dev.
+                Website created by <a href="https://linkedin.com/in/juansilvadesign" rel="noopener noreferrer" title="Connect with me!" target="_blank">Juan Silva</a>, Product Designer and Frontend Dev.
             </footer> 
 
         </div>
